# Cruisewise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
backend/: auth.py  config.py  db.py  errors.py  llm.py  main.py  schemas.py
backend/agents/: match_agent.py  watch_agent.py
backend/agents/subagents/: reprice_analyzer.py  reprice_writer.py  ship_researcher.py  synthesizer.py
backend/db/migrations/: 001_initial.sql  002_sailings.sql  003_add_currency.sql  004_add_user_id.sql
backend/routers/: account.py  admin.py  booking.py  match.py  watch.py
backend/tools/: apify_client.py  cruise_inventory.py  email_gen.py  email_sender.py  notifier.py  price_math.py  reviews_rag.py
backend/workers/: inventory_refresh.py  price_checker.py
frontend/: account.html  admin.html  index.html  match.html  watch.html
frontend/css/: style.css
frontend/js/: account.js  admin.js  api.js  auth-ui.js  auth.js  match.js  watch.js
scripts/: seed_inventory.py  seed_reviews.py  trigger_mock_drop.py
tests/: test_cruise_inventory.py  test_inventory_refresh.py  test_price_math.py  test_routers.py  test_schemas.py  test_ship_researcher.py
